--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -22,39 +22,21 @@
 @use './components/navLink';
 @use './components/input';
 
-@use './../../node_modules/@siemens/ix/dist/siemens-ix/theme/classic-dark.css';
-@use './../../node_modules/@siemens/ix/dist/siemens-ix/theme/classic-light.css';
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 $font-family: 'Siemens Sans', Arial, Helvetica, sans-serif;
 
-[data-theme='light'] #__docusaurus {
-  background-color: #ffffff;
+#__docusaurus {
+  color: var(--theme-color-std-text);
 
   --ifm-font-color-base: var(--theme-color-std-text);
   --ifm-heading-color: var(--theme-color-std-text);
   --ifm-navbar-link-hover-color: var(--theme-color-dynamic);
   --ifm-menu-color-active: var(--theme-color-dynamic);
 
-  .navbar {
-    background-color: #ffffff;
-  }
-}
-
-[data-theme='dark'] #__docusaurus {
-  background-color: #000028;
-
-  --ifm-font-color-base: var(--theme-color-std-text);
-  --ifm-heading-color: var(--theme-color-std-text);
-  --ifm-navbar-link-hover-color: var(--theme-color-dynamic);
-  --ifm-menu-color-active: var(--theme-color-dynamic);
-
-  .navbar {
-    background-color: #000028;
-  }
+  --ifm-background-color: var(--theme-color-2, red);
 }
 
 :root {
