fix: extend classic theme after theme import to ensure that css class exist

--- a/src/scss/classic-theme.scss
+++ b/src/scss/classic-theme.scss
@@ -3,3 +3,11 @@
  */
 @use '@siemens/ix/dist/siemens-ix/theme/classic-dark.css';
 @use '@siemens/ix/dist/siemens-ix/theme/classic-light.css';
+
+.color-table-classic-dark {
+  @extend .theme-classic-dark;
+}
+
+.color-table-classic-light {
+  @extend .theme-classic-light;
+}
