switch to latest figma spec

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -23,6 +23,7 @@
 @use './components/apiTable';
 @use './components/navLink';
 @use './components/input';
+@use './components/sidebarItem';
 
 @tailwind base;
 @tailwind components;
