--- a/src/theme/DocRoot/Layout/Sidebar/sort-switch.module.css
+++ b/src/theme/DocRoot/Layout/Sidebar/sort-switch.module.css
@@ -14,7 +14,7 @@
 .SortSwitchButton {
   all: unset;
   display: flex;
-  height: 1.5rem;
+  height: 1rem;
   padding: 4px;
   justify-content: center;
   align-items: center;
@@ -23,6 +23,9 @@
   border-radius: 4px;
   border: 1px solid var(--theme-color-x-weak-bdr);
   cursor: pointer;
+}
+
+.Icon {
 }
 
 .SortSwitchButton.Active {
