--- a/src/components/theme/SortSwitch/sort-switch.module.css
+++ b/src/components/theme/SortSwitch/sort-switch.module.css
@@ -12,9 +12,9 @@
 }
 
 .SortSwitchButton {
-  all: unset;
   display: flex;
-  height: 1rem;
+  height: 1.5rem;
+  background-color: transparent;
   padding: 4px;
   justify-content: center;
   align-items: center;
