--- a/src/components/theme/SortSwitch/sort-switch.module.css
+++ b/src/components/theme/SortSwitch/sort-switch.module.css
@@ -23,6 +23,7 @@
   border-radius: 4px;
   border: 1px solid var(--theme-color-x-weak-bdr);
   cursor: pointer;
+  color: var(--theme-color-std-text);
 }
 
 .SortSwitchButton.Active {
