--- a/src/theme/DocRoot/Layout/Sidebar/styles.module.css
+++ b/src/theme/DocRoot/Layout/Sidebar/styles.module.css
@@ -26,7 +26,7 @@
   .sidebarViewport {
     top: 0;
     position: sticky;
-    height: calc(100% - 3rem);
+    height: 100%;
     max-height: 100vh;
   }
 
