fix: component button header color

--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -6,8 +6,8 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-@import '@siemens/ix/scss/mixins/input';
+@use '@siemens/ix/scss/mixins/input';
 
-@include label('');
-@include form('');
-@include element-form('');
+@include input.label('');
+@include input.form('');
+@include input.element-form('');
