add dos and donts replacement

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -24,6 +24,7 @@
 @use './components/navLink';
 @use './components/input';
 @use './components/sidebarItem';
+@use './components/dosAndDonts';
 
 @tailwind base;
 @tailwind components;
